[gd_scene load_steps=8 format=2]

[ext_resource path="res://hand/draggable_card.gd" type="Script" id=1]
[ext_resource path="res://debug/big_prototype_dynamic_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://debug/temp2.png" type="Texture" id=3]
[ext_resource path="res://card_model.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 2, 0.42, 0.47, 0.67 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 0.05 )

[node name="Area" type="Area"]
script = ExtResource( 1 )

[node name="Tile" parent="." instance=ExtResource( 4 )]
transform = Transform( -2.12437e-08, 0, -0.486, 0, 0.486, 0, 0.486, 0, -2.12437e-08, 0, 0, -0.0421015 )
__meta__ = {
"_edit_pinned_properties_": [ "header" ]
}
header = 1.0

[node name="OldTile" type="CSGBox" parent="."]
visible = false
layers = 2
depth = 0.1
material = SubResource( 2 )

[node name="NoPlace" type="CSGBox" parent="."]
visible = false
layers = 2
depth = 0.1
material = SubResource( 3 )

[node name="Label3D2" type="Label3D" parent="NoPlace"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00765145, 0.0633913, 0.119253 )
layers = 2
modulate = Color( 0.568627, 0, 0, 1 )
text = "NOT ENOUGH ACTIONS"
font = ExtResource( 2 )
autowrap = true
width = 180.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.661594, 0.0514873 )
layers = 2
text = "hello i am 3d textawefawefawefawefawefawefawef"
autowrap = true
width = 180.0

[connection signal="input_event" from="." to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area_mouse_exited"]
